--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectName=your-repo
 sonar.projectKey=assoconnect-your-repo
 sonar.sources=src
 sonar.tests=tests
-sonar.php.coverage.reportPaths=tests/logs/clover.xml
-sonar.php.tests.reportPath=tests/logs/phpunit.report.xml
+sonar.php.coverage.log-bundlePaths=tests/logs/clover.xml
+sonar.php.tests.log-bundlePath=tests/logs/phpunit.log-bundle.xml
