Fix config sonar-project

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectName=your-repo
-sonar.projectKey=assoconnect-your-repo
+sonar.projectName=log-bundle
+sonar.projectKey=assoconnect_log-bundle
 sonar.sources=src
 sonar.tests=tests
 sonar.php.coverage.log-bundlePaths=tests/logs/clover.xml
