--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "^9.2",
+        "symfony/yaml": "^5.1",
+        "symfony/validator": "^5.1"
     },
     "require": {
         "php": "^7.4",
