--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit bootstrap="./vendor/autoload.php">
+    <php>
+        <ini name="error_reporting" value="-1" />
+        <env name="KERNEL_CLASS" value="AssoConnect\LogBundle\Tests\Functional\App\TestKernel" />
+        <env name="APP_ENV" value="test" />
+        <env name="APP_DEBUG" value="1" />
+    </php>
     <testsuites>
         <testsuite name="main">
             <directory>./tests/</directory>
