--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,53 @@
 {
-    "name": "assoconnect/your-repo",
+    "name": "assoconnect/log-bundle",
     "repositories": [
         {
             "type": "git",
-            "url": "https://github.com/assoconnect/your-repo/"
+            "url": "https://github.com/assoconnect/log-bundle/"
         }
     ],
     "type": "library",
     "description": "",
-    "keywords": ["php"],
-    "homepage": "https://github.com/assoconnect/your-repo/",
+    "keywords": ["php", "Symfony", "log"],
+    "homepage": "https://github.com/assoconnect/log-bundle/",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "AssoConnect",
+            "homepage": "https://www.assoconnect.com"
+        },
+        {
+            "name": "Florian GUIMIER"
+        }
+    ],
     "autoload": {
         "psr-4": {
-            "AssoConnect\\YourRepo\\": "src/"
+            "AssoConnect\\LogBundle\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "AssoConnect\\YourRepo\\Tests\\": "tests/"
+            "AssoConnect\\LogBundle\\Tests\\": "tests/"
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "^9.2",
+        "symfony/yaml": "^4.4",
+        "symfony/validator": "^4.4"
     },
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "symfony/framework-bundle": "^4.0",
+        "doctrine/dbal": "^2.10",
+        "symfony/serializer": "^5.1",
+        "symfony/property-access": "^5.1",
+        "doctrine/doctrine-bundle": "^1.9",
+        "doctrine/orm": "^2.7",
+        "assoconnect/php-date-bundle": "^2.3",
+        "assoconnect/php-percent-bundle": "^1.0",
+        "moneyphp/money": "^3.3",
+        "ext-json": "*",
+        "ramsey/uuid": "^3.7",
+        "ramsey/uuid-doctrine": "^1.4"
     }
 }
