--- a/composer.json
+++ b/composer.json
@@ -32,19 +32,17 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2",
-        "symfony/yaml": "^4.4",
-        "symfony/validator": "^4.4"
+        "symfony/yaml": "^4.4|^5.0",
+        "symfony/validator": "^4.4|^5.0"
     },
     "require": {
         "php": "^7.4",
-        "symfony/framework-bundle": "^4.0",
+        "symfony/framework-bundle": "^4.0|^5.0",
         "doctrine/dbal": "^2.10",
         "symfony/serializer": "^5.1",
         "symfony/property-access": "^5.1",
-        "doctrine/doctrine-bundle": "^1.9",
+        "doctrine/doctrine-bundle": "^1.9|^2.0",
         "doctrine/orm": "^2.7",
-        "assoconnect/php-date-bundle": "^2.3",
-        "assoconnect/php-percent-bundle": "^1.0",
         "moneyphp/money": "^3.3",
         "ext-json": "*",
         "ramsey/uuid": "^3.7",
