--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.2",
         "symfony/yaml": "^4.4|^5.0",
-        "symfony/validator": "^4.4|^5.0"
+        "symfony/validator": "^4.4|^5.0",
+        "squizlabs/php_codesniffer": "^3"
     },
     "require": {
         "php": "^7.4",
