--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,11 @@
         "phpunit/phpunit": "^9.2",
         "symfony/yaml": "^4.4|^5.0",
         "symfony/validator": "^4.4|^5.0",
-        "squizlabs/php_codesniffer": "^3"
+        "squizlabs/php_codesniffer": "^3",
+        "phpstan/phpstan": "^1.2",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-strict-rules": "^1.1",
+        "phpstan/phpstan-symfony": "^1.0"
     },
     "require": {
         "php": "^7.4",
