--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "phpstan/phpstan-symfony": "^1.0"
     },
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "symfony/framework-bundle": "^4.0|^5.0",
         "doctrine/dbal": "^2.10",
         "symfony/serializer": "^5.1",
