--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "symfony/framework-bundle": "^4.0|^5.0",
-        "doctrine/dbal": "^2.10",
+        "doctrine/dbal": "^2.10|^3.0",
         "symfony/serializer": "^5.1",
         "symfony/property-access": "^5.1",
         "doctrine/doctrine-bundle": "^1.9|^2.0",
