--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
 
 jobs:
   build:
+    strategy:
+      fail-fast: false
+      matrix:
+        php-versions: ['7.4', '8.0', '8.1']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +20,7 @@ jobs:
       
       - uses: shivammathur/setup-php@2.10.0
         with:
-          php-version: '7.4'
+          php-version: ${{ matrix.php-versions }}
       
       - run: composer validate --strict
       
