--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,8 @@
         "phpunit/phpunit": "^9.2",
         "symfony/yaml": "^4.4|^5.0",
         "symfony/validator": "^4.4|^5.0",
-        "squizlabs/php_codesniffer": "^3",
-        "assoconnect/phpstan-rules": "^1.0",
-        "phpstan/phpstan-symfony": "^1.0"
+        "phpstan/phpstan-symfony": "^1.0",
+        "assoconnect/php-quality-config": "^1.2"
     },
     "require": {
         "php": "^7.4|^8.0",
@@ -49,6 +48,12 @@
         "moneyphp/money": "^3.3",
         "ext-json": "*",
         "ramsey/uuid": "^3.7",
-        "ramsey/uuid-doctrine": "^1.4"
+        "ramsey/uuid-doctrine": "^1.4",
+        "doctrine/annotations": "^1.0|^2.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
