--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,7 +9,7 @@ services:
   AssoConnect\LogBundle\:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    resource: '../../../src/*'
+    resource: '../src/*'
 
 
   AssoConnect\LogBundle\Subscriber\LoggerSubscriber:
