--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "doctrine/orm": "^2.7",
         "moneyphp/money": "^3.3",
         "ext-json": "*",
-        "ramsey/uuid": "^3.7",
+        "ramsey/uuid": "^3.7|^4.0",
         "ramsey/uuid-doctrine": "^1.4",
         "doctrine/annotations": "^1.0|^2.0"
     },
