--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "symfony/property-access": "^5.1",
         "doctrine/doctrine-bundle": "^1.9|^2.0",
         "doctrine/orm": "^2.7",
-        "moneyphp/money": "^3.3",
+        "moneyphp/money": "^3.0|^4.0",
         "ext-json": "*",
         "ramsey/uuid": "^3.7|^4.0",
         "ramsey/uuid-doctrine": "^1.4",
