--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "assoconnect/php-quality-config": "^1.2"
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "symfony/framework-bundle": "^4.0|^5.0",
         "doctrine/dbal": "^2.10|^3.0",
         "symfony/serializer": "^5.1",
