--- a/composer.json
+++ b/composer.json
@@ -32,14 +32,14 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2",
-        "symfony/yaml": "^4.4|^5.0",
-        "symfony/validator": "^4.4|^5.0",
+        "symfony/yaml": "^5.0",
+        "symfony/validator": "^5.0",
         "phpstan/phpstan-symfony": "^1.0",
         "assoconnect/php-quality-config": "^1.2"
     },
     "require": {
         "php": "^8.2",
-        "symfony/framework-bundle": "^4.0|^5.0",
+        "symfony/framework-bundle": "^5.0",
         "doctrine/dbal": "^2.10|^3.0",
         "symfony/serializer": "^5.1",
         "symfony/property-access": "^5.1",
