--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2",
         "symfony/yaml": "^5.0",
         "symfony/validator": "^5.0",
         "phpstan/phpstan-symfony": "^1.0",
@@ -48,8 +47,7 @@
         "moneyphp/money": "^3.0|^4.0",
         "ext-json": "*",
         "ramsey/uuid": "^3.7|^4.0",
-        "ramsey/uuid-doctrine": "^1.4",
-        "doctrine/annotations": "^1.0|^2.0"
+        "ramsey/uuid-doctrine": "^1.4"
     },
     "config": {
         "allow-plugins": {
