--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
         }
     },
     "require-dev": {
-        "symfony/yaml": "^5.0",
-        "symfony/validator": "^5.0",
+        "symfony/yaml": "^5.0|^6.0",
+        "symfony/validator": "^5.0|^6.0",
         "phpstan/phpstan-symfony": "^1.0",
         "assoconnect/php-quality-config": "^1.2"
     },
     "require": {
-        "php": "^8.2",
+        "php": "^7.4|^8.2",
         "symfony/framework-bundle": "^5.0|^6.0",
         "doctrine/dbal": "^2.10|^3.0",
         "symfony/serializer": "^5.1|^6.0",
