--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,7 @@ services:
 
 
   AssoConnect\LogBundle\Subscriber\LoggerSubscriber:
+    public: true
     arguments:
       $includedEntities: []
       $excludedEntities: []
