Support for Symfony 6

--- a/tests/Functional/App/config/config.yml
+++ b/tests/Functional/App/config/config.yml
@@ -30,6 +30,9 @@ services:
     autoconfigure: true
     public: true
 
+  AssoConnect\LogBundle\Serializer\LogSerializer:
+    class: AssoConnect\LogBundle\Serializer\LogSerializer
+
   AssoConnect\LogBundle\Tests\Functional\Service\LogFactory:
     autowire: true
 
