--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "symfony/validator": "^5.2|^6.0",
         "phpstan/phpstan-symfony": "^1.0",
         "assoconnect/php-quality-config": "^1.10",
-        "symfony/security-core": "^5.0|^6.0"
+        "symfony/security-core": "^5.0|^6.0",
+        "rector/rector": "^1.2"
     },
     "require": {
         "php": "^8.2",
