--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     },
     "require": {
         "php": "^8.2",
-        "symfony/framework-bundle": "^5.3|^6.0|^7.0",
+        "symfony/framework-bundle": "^6.2|^7.0",
         "doctrine/dbal": "^2.10|^3.0",
         "symfony/serializer": "^5.1|^6.0",
         "symfony/property-access": "^5.4|^6.0",
