--- a/composer.json
+++ b/composer.json
@@ -31,19 +31,19 @@
         }
     },
     "require-dev": {
-        "symfony/yaml": "^5.0|^6.0",
-        "symfony/validator": "^5.2|^6.0",
+        "symfony/yaml": "^6.2",
+        "symfony/validator": "^6.2",
         "phpstan/phpstan-symfony": "^1.0",
         "assoconnect/php-quality-config": "^1.10",
-        "symfony/security-core": "^5.0|^6.0",
+        "symfony/security-core": "^6.2",
         "rector/rector": "^1.2"
     },
     "require": {
         "php": "^8.2",
         "symfony/framework-bundle": "^6.2|^7.0",
         "doctrine/dbal": "^2.10|^3.0",
-        "symfony/serializer": "^5.1|^6.0",
-        "symfony/property-access": "^5.4|^6.0",
+        "symfony/serializer": "^6.2",
+        "symfony/property-access": "^6.2",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/orm": "^2.9",
         "moneyphp/money": "^3.2|^4.0",
